@@ -1,0 +1,10 @@
+Title: Fix sending notification to global fallback email address
+Level: 2
+Component: notifications
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i3p1
+Date: 1482156687
+
+
